# InTheZoneA

./: .gitignore  .project  .travis.yml  CMakeLists.txt  Doxyfile  Doxyfile.bak  Doxyfile_Latex  Makefile  README.md  common.mk  format.sh  git  post_build.sh  project.pros  pros-install_ubuntu.sh  test.c  testMath.py
.metadata/: version.ini
config/: Doxyfile  publish-doxygen.sh  travisci_rsa.enc  travisci_rsa.pub
docs/: _a_p_i_8h.html  _a_p_i_8h__dep__incl.md5  _a_p_i_8h_a1c59207742a1acf45a8957d7f04f9dfe_icgraph.md5  _a_p_i_8h_a22269cefc22e487f7acdcc4737d58c4a_icgraph.md5  _a_p_i_8h_a51af160afcbfb860dfff75d91ffb3824_icgraph.md5  _a_p_i_8h_a868ab46aa5992e60829936c0109160bf_icgraph.md5  _a_p_i_8h_aa53f19724bcf9f7bf1b4468b5982553b_icgraph.md5  _a_p_i_8h_ad56fcec15d1a48deb8780bb0fc38be4d_icgraph.md5  _r_e_a_d_m_e_8md.html  a00002.html  a00008.js  a00012.md5  a00013.md5  a00014.js  a00015.md5  a00016.md5  a00017.js  a00019.md5  a00020.js  a00021.md5  a00023.html  a00025.md5  a00026.html  a00026.js  a00027.md5  a00028.md5  a00035.html  a00035.js  a00036.md5  a00038.js  a00041.html  a00041.js  a00042.md5  a00044.html  a00044.js  a00050.html  a00058.js  a00063.html  annotated.html  auto_8c.html  (+77 more)
include/: API.h  auto.h  battery.h  claw.h  controller.h  drive.h  encoders.h  goal.h  gyro.h  joystick.h  lcd.h  lifter.h  list.h  localization.h  log.h  main.h  matrix.h  menu.h  mobile_goal_intake.h  motor_ports.h  partner.h  ports.h  potentiometer.h  routines.h  sensor_ports.h  sensors.h  slew.h  toggle.h  ultrasonic.h  vlib.h  vmath.h
src/: .lifter.c.swp  auto.c  battery.c  (+25 more)
(+2877 files in other folders)
